[refactoring] 겹치는 Exception 처리 및 주석 추가 및 로직 수정